// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ewvBdG"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jwweiS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hahKxU"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 jVjJSB"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 gLdulF"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iwmLqB"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gJqCRU"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 jqwMmX"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 la-DsyU"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 kDWgAp"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 LpsD"
            >
              <a
                class="StyledButton-sc-323bzc-0 jJMobB"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dwFxbl"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cyRauk"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cpjxjU"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dwFxbl"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hahKxU"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 qiLGt FileInput__ContentsBox-sc-1jzq7im-0 dibkvr"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jpkGoQ"
          >
            <span
              class="StyledText-sc-1sadyjn-0 lgSdZB FileInput__Message-sc-1jzq7im-2 iscQDs"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 fIdNsq"
              tabindex="0"
            >
              browse
            </a>
          </div>
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 dPOyvX"
            type="file"
          />
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dwFxbl"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 fqmvlS"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hahKxU"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 WSLXJ"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 bjyyAC"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 nKFMy"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 guihlT"
            >
              <svg
                class="StyledMeter-sc-nsxarx-0 dYqvpi"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gqCMcy"
              />
              <span
                class="StyledText-sc-1sadyjn-0 eHxAW"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dwFxbl"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hahKxU"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 iNnJUw"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 eurrtV"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 bXBQEl"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ewvBdG"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jwweiS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hahKxU"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 ddrKmf"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 gLdulF"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iwmLqB"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gJqCRU"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 jqwMmX"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 la-DsyU"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 LpsD"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 eHhrMZ"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 bXBQEl"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jkVdVC FormField__FormFieldBox-sc-m9hood-0 casIFC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jOYKvZ"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 iPSxqg FormField__FormFieldContentBox-sc-m9hood-1 jyrxxG"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 iUHIDl"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cFrpnf"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kxQojH"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 eZOkUx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 gqfmWi"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gqCMcy"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 hoZlGF StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jkVdVC FormField__FormFieldBox-sc-m9hood-0 casIFC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jOYKvZ"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fpBxMF FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 cpcuRz"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 eZOkUx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 gqfmWi"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gqCMcy"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 hoZlGF StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gqCMcy"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 hoZlGF StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jkVdVC FormField__FormFieldBox-sc-m9hood-0 casIFC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jOYKvZ"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 iPSxqg FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 kLIjuW StyledSelect__StyledSelectDropButton-sc-znp66n-5 dkKfvO"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 eVZuZv"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 fdcRcF"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 iUHIDl"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 cFrpnf StyledSelect__SelectTextInput-sc-znp66n-4 ihSMbV"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 knTyqE"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 kwDoXo"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 foPDgE"
          >
            <button
              class="StyledButton-sc-323bzc-0 jJMobB"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ewvBdG"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jwweiS"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hahKxU"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 ddrKmf"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 gLdulF"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iwmLqB"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gJqCRU"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 jqwMmX"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 la-DsyU"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 LpsD"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 eHhrMZ"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 bXBQEl"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jkVdVC FormField__FormFieldBox-sc-m9hood-0 casIFC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jOYKvZ"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 iPSxqg FormField__FormFieldContentBox-sc-m9hood-1 jyrxxG"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 iUHIDl"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cFrpnf"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kxQojH"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 eZOkUx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 gqfmWi"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gqCMcy"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 hoZlGF StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jkVdVC FormField__FormFieldBox-sc-m9hood-0 casIFC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jOYKvZ"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fpBxMF FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 cpcuRz"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 eZOkUx StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 gqfmWi"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gqCMcy"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 hoZlGF StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gqCMcy"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 boJefE"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bTCisz StyledRadioButton-sc-g1f6ld-5 gRXRYB"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kFqzCK"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 hoZlGF StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cEDgab"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jkVdVC FormField__FormFieldBox-sc-m9hood-0 casIFC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jOYKvZ"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 iPSxqg FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 kLIjuW StyledSelect__StyledSelectDropButton-sc-znp66n-5 dkKfvO"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 eVZuZv"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 fdcRcF"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 iUHIDl"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 cFrpnf StyledSelect__SelectTextInput-sc-znp66n-4 ihSMbV"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 knTyqE"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 kwDoXo"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 foPDgE"
          >
            <button
              class="StyledButton-sc-323bzc-0 jJMobB"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ewvBdG"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dpLFNQ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEgVPL"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 jkVdVC FormField__FormFieldBox-sc-m9hood-0 casIFC"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jOYKvZ"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 iPSxqg FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: [object Object]"
                class="StyledButton-sc-323bzc-0 kLIjuW StyledSelect__StyledSelectDropButton-sc-znp66n-5 dkKfvO"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 eVZuZv"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 fdcRcF"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 kmUhIu"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 cFbisQ"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gqCMcy"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 kpQRvd"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 iUdBgW"
                      id="template__input"
                      name="template"
                      readonly=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 knTyqE"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 kwDoXo"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 eiuAqj"
          >
            <button
              class="StyledButton-sc-323bzc-0 jJMobB"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ewvBdG"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 eIcKhy"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bjKeYU"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 fyxlNs"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-guDLRT jyRnhm"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 kxqAqm"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
